--- a/ex01/Makefile
+++ b/ex01/Makefile
@@ -8,7 +8,7 @@ SRCS = main.cpp \
 		
 OBJS = $(SRCS:.cpp=.o)
 
-.PHONY: all clean fclean re c11
+.PHONY: all clean fclean re c11 test rmtest
 
 all: $(NAME)
 
@@ -28,3 +28,11 @@ re: fclean all
 
 c11: CXXFLAGS += -std=c++11
 c11: re
+
+TEST = test
+TSRC = test.cpp
+test: $(TSRC)
+	@$(CXX) $(CXXFLAGS) $(TSRC) -o $(TEST)
+
+rmtest:
+	@$(RM) $(TEST)
